test/org/midica/testfiles/failing/eff-cd-dest-missing.midica
INCLUDE inc/instruments.midica


0: ctrl_dest
0:   .src(vol)
0:   .on()

